--- a/src/components/Layout/Footer/index.scss
+++ b/src/components/Layout/Footer/index.scss
@@ -1,32 +1,61 @@
 @import "./../../../assets/sass/theme.scss";
 
 footer {
-    .logo {
-        background-color: #c00;
-    }
+    background-color: $white;
+    border-radius: 9999px 9999px 0 0;
 
-    div {
-        margin-top: 0.5rem;
-        font-size: 0.75rem;
-        display: inline-block;
-        font-weight: 400;
-        line-height: 1.155rem;
+    > .content {
+        padding: 2.5rem 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
 
-        a {
-            color: $black;
+        > .logo {
+            height: 2.75rem;
+        }
 
-            &:hover {
-                color: $black;
+        > nav {
+        }
+
+        > .button {
+        }
+
+        > .social {
+            > h3 {
+                font-size: 1.125rem;
+                font-weight: 600 !important;
+                color: #3d3d3d;
             }
 
-            #heart {
-                height: 16px;
-                width: 16px;
-
-                path {
-                    fill: #c00;
-                }
+            > .content {
+                display: flex;
+                gap: 5px;
             }
         }
+
+        // div {
+        //     margin-top: 0.5rem;
+        //     font-size: 0.75rem;
+        //     display: inline-block;
+        //     font-weight: 400;
+        //     line-height: 1.155rem;
+
+        //     a {
+        //         color: $black;
+
+        //         &:hover {
+        //             color: $black;
+        //         }
+
+        //         #heart {
+        //             height: 16px;
+        //             width: 16px;
+
+        //             path {
+        //                 fill: #c00;
+        //             }
+        //         }
+        //     }
+        // }
     }
 }
