--- a/src/components/Layout/Navbar/index.scss
+++ b/src/components/Layout/Navbar/index.scss
@@ -3,8 +3,9 @@
 header {
     display: flex !important;
     justify-content: space-between;
-    align-items: baseline;
-    padding: 3rem 0;
+    align-items: center;
+    height: 130px;
+    z-index: 1;
 
     > .logo {
         position: relative;
