--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -17,7 +17,7 @@
     }
 
     #pinguinOnIceberg {
-        z-index: 0;
+        z-index: 1;
         position: absolute;
         top: 36vh;
         left: calc(50vw - 43vh);
@@ -42,14 +42,85 @@
         }
 
         > .content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            position: relative;
+            top: -2.5rem;
+
             > .semiBanner {
                 border-radius: 9999px;
                 padding: 40px 110px 27px 110px;
-                background-color: $white;
+                background-color: #ffffff80;
+                backdrop-filter: blur(10px);
+                margin-bottom: 40px;
 
                 > p {
                     font-family: "CHEDROS", sans-serif;
                     font-size: 70px;
+                }
+
+                &.time {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    gap: 35px;
+                    border-radius: 40px;
+                    padding: 20px 40px;
+
+                    > div {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+
+                        > .time {
+                            font-size: 3.4rem;
+                            font-family: "CHEDROS", sans-serif;
+                            font-weight: bold;
+                            color: $dark;
+                        }
+
+                        > .label {
+                            font-size: 1.5rem;
+                            font-family: "Montserrat", sans-serif;
+                            font-weight: bold;
+                            color: $primary;
+                        }
+                    }
+                }
+            }
+
+            > .connectWallet {
+                padding-left: 80px;
+                padding-right: 80px;
+            }
+
+            > h2 {
+                font-family: "CHEDROS", sans-serif;
+                font-weight: bold;
+                font-size: 2.5rem;
+                margin: 0;
+            }
+
+            > .mint {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 15px;
+
+                > .nftLeft {
+                    background-color: $white;
+                    border-radius: 999px;
+                    padding: 16px 40px 8px 40px;
+                    font-family: "CHEDROS", sans-serif;
+                    font-weight: bold;
+                    font-size: 2.5rem;
+                    text-align: center;
+                }
+
+                > .mintNow {
+                    padding: 17px 85px;
                 }
             }
         }
@@ -61,8 +132,8 @@
             border-radius: 9999px;
             display: flex;
             gap: 14px;
+            background-color: #ffffff80;
             backdrop-filter: blur(10px);
-            background: #ffffff80;
 
             > p {
                 padding: 12px 0 12px 24px;
