--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -163,22 +163,40 @@
         }
     }
 
+    h2 {
+        font-family: "CHEDROS", sans-serif;
+        font-size: 80px;
+        font-weight: bold !important;
+        color: $white;
+    }
+
     #welcome {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         gap: 10px;
-
-        > h2 {
-            font-family: "CHEDROS", sans-serif;
-            font-size: 80px;
-            font-weight: bold;
-            color: $white;
-        }
+        margin-bottom: 300px;
 
         > img {
             height: 400px;
+        }
+    }
+
+    #theTeam {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 100px;
+
+        > .content {
+            display: flex;
+            gap: 30px;
+            > div {
+                flex: 1 1 calc(25% - 23px);
+            }
         }
     }
 }
