--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -183,6 +183,126 @@
         }
     }
 
+    #manyAdvantage {
+        margin-bottom: 270px;
+
+        > .preTitle {
+            font-size: 1.6rem;
+            color: $white;
+            text-align: center;
+        }
+
+        > h2 {
+            text-align: center;
+            margin-bottom: 295px;
+        }
+
+        > .content {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            gap: 190px 60px;
+            flex-wrap: wrap;
+
+            .avantageCard {
+                flex-basis: calc(30% - 1px);
+                position: relative;
+                background: $white;
+                // height: 230px;
+                border-radius: 20px;
+                max-width: 530px;
+                min-height: 200px;
+
+                > .image {
+                    position: absolute;
+                    // top: -68%;
+                    bottom: calc(100% - 50px);
+                    right: 0;
+                    left: 0;
+                    margin: auto;
+                    width: 60%;
+
+                    &.emperor {
+                        img {
+                            border-radius: 50%;
+                        }
+                    }
+                    &.wallet {
+                        // img {
+                        width: 80%;
+                        // top: -80%;
+                        bottom: calc(100% - 95px);
+                        left: 8%;
+                        // }
+                    }
+                    &.airdrop {
+                        // img {
+                        width: 90%;
+                        // top: -170%;
+                        bottom: calc(100% - 90px);
+                        left: 7%;
+                        // }
+                    }
+                    &.early {
+                        perspective: 270px;
+                        width: 96%;
+                        // top: -32%;
+                        bottom: calc(100% - 75px);
+                        right: 4%;
+                        img {
+                            transform: rotateY(351deg);
+                        }
+                    }
+                    &.community {
+                        width: 94%;
+                        // top: -66%;
+                        bottom: calc(100% - 70px);
+                        img {
+                            border-radius: 50%;
+                        }
+                    }
+
+                    > img {
+                        width: 100%;
+                    }
+                }
+
+                > .content {
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                    flex-direction: column;
+                    max-width: 430px;
+                    margin: 80px auto auto auto;
+                    padding: 0 15px 25px 15px;
+
+                    h2 {
+                        color: $primary;
+                        font-size: 2rem;
+                        font-family: "CHEDROS", sans-serif;
+                        font-weight: bold;
+                        text-align: center;
+                        margin-bottom: 0.5rem;
+                    }
+
+                    p {
+                        font-size: 1.25rem;
+                        font-family: "Montserrat", sans-serif;
+                        color: $dark;
+                        text-align: center;
+                        font-weight: 600;
+
+                        b {
+                            color: $primary;
+                            font-weight: bold;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
     #theTeam {
         display: flex;
         flex-direction: column;
@@ -190,6 +310,7 @@
         justify-content: center;
         flex-wrap: wrap;
         gap: 100px;
+        margin-bottom: 320px;
 
         > .content {
             display: flex;
@@ -197,6 +318,20 @@
             > div {
                 flex: 1 1 calc(25% - 23px);
             }
+        }
+    }
+
+    #faq {
+        > h2 {
+            text-align: center;
+        }
+
+        > .content {
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            max-width: 900px;
+            margin: auto;
         }
     }
 }
