--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -100,6 +100,7 @@ body {
   line-height: 1;
   font-family: "Montserrat", sans-serif;
   background-color: $bg-body;
+  background: linear-gradient(180deg, black 360vh, $bg-body 700vh);
 }
 
 p {
