--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -183,6 +183,109 @@
         }
     }
 
+    #ourLaunchpad {
+        > h2 {
+            font-size: 5rem;
+            color: $primary;
+            text-align: center;
+        }
+
+        > .subTitle {
+            font-size: 1.25rem;
+            text-align: center;
+            color: $white;
+            max-width: 600px;
+            margin: auto;
+            margin-bottom: 120px;
+        }
+
+        > .submersibleAndCard {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 160px;
+            align-items: stretch;
+
+            > .submersible {
+                width: 60%;
+                z-index: 1;
+                position: relative;
+                display: flex;
+                align-items: center;
+
+                > img {
+                    height: 160%;
+                    position: absolute;
+                    left: -23%;
+                    transform: rotate(-7deg);
+                }
+            }
+            > .card {
+                width: 40%;
+            }
+        }
+    }
+
+    p {
+        font-size: 1.25rem;
+        font-family: "Montserrat", sans-serif;
+        font-weight: 600;
+
+        b {
+            color: $primary;
+            font-weight: bold;
+        }
+    }
+
+    .card {
+        background-color: $white;
+        border-radius: 20px;
+        padding: 33px 42px;
+        font-family: "Montserrat", sans-serif;
+        // font-weight: bold;
+        font-size: 1.25rem;
+
+        p:not(:last-child) {
+            margin-bottom: 1rem;
+        }
+
+        > h3 {
+            color: $primary;
+            font-size: 1.8rem;
+            font-family: "Montserrat", sans-serif;
+            font-weight: bold !important;
+            margin-bottom: 2.5rem;
+            text-align: center;
+        }
+
+        > ul {
+            > li {
+                font-family: "Montserrat", sans-serif;
+                font-size: 1.5rem;
+                font-weight: bold;
+                list-style: none;
+                position: relative;
+
+                &:not(:last-child) {
+                    margin-bottom: 3.75rem;
+                }
+
+                &::before {
+                    content: "";
+                    background: #4279e0;
+                    left: -3rem;
+                    top: 0.1rem;
+                    width: 1.5rem;
+                    position: absolute;
+                    height: 1.5rem;
+                    border-radius: 9999px;
+                }
+            }
+        }
+    }
+
     #manyAdvantage {
         margin-bottom: 270px;
 
@@ -280,17 +383,137 @@
                     }
 
                     p {
-                        font-size: 1.25rem;
-                        font-family: "Montserrat", sans-serif;
                         color: $dark;
                         text-align: center;
-                        font-weight: 600;
-
-                        b {
-                            color: $primary;
-                            font-weight: bold;
-                        }
                     }
+                }
+            }
+        }
+    }
+
+    #globalPenguinSociety {
+        margin-bottom: 220px;
+
+        > h2 {
+            font-size: 5rem;
+            margin-bottom: 80px;
+            text-align: center;
+        }
+        > .content {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: auto auto auto auto;
+            gap: 60px 0px;
+            grid-auto-flow: row;
+            grid-template-areas:
+                "weEstabliched weEstabliched weEstabliched weEstabliched weEstabliched weEstabliched weEstabliched . ourAchievements ourAchievements ourAchievements ourAchievements ourAchievements ourAchievements ourAchievements"
+                "video video video video video video video video video video video video video video video"
+                "develop develop develop . identity identity identity . moreInfos moreInfos moreInfos moreInfos moreInfos moreInfos moreInfos"
+                "educate educate educate . influence influence influence . moreInfos moreInfos moreInfos moreInfos moreInfos moreInfos moreInfos";
+
+            > .weEstablished {
+                padding-left: 1rem;
+                grid-area: weEstabliched;
+
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+
+                font-family: "Montserrat", sans-serif;
+                color: $white;
+
+                > h3 {
+                    font-weight: bold !important;
+                    margin-bottom: 1rem;
+                    font-size: 1.8rem;
+                }
+                > p {
+                    font-size: 1.8rem;
+                    font-weight: lighter;
+                }
+            }
+
+            > .card {
+                grid-area: ourAchievements;
+            }
+
+            > .video {
+                grid-area: video;
+            }
+
+            > .globalPoint {
+                > .title {
+                    display: flex;
+                    align-items: center;
+                    gap: 1rem;
+                    margin-bottom: 2rem;
+
+                    > .number {
+                        background-color: $primary;
+                        border-radius: 999px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        font-family: "CHEDROS", sans-serif;
+                        font-weight: bold !important;
+                        font-size: 2.5rem;
+                        width: 4rem;
+                        height: 4rem;
+                        color: $white;
+                        padding: 7px 0 0 2px;
+                    }
+
+                    > h3 {
+                        font-family: "CHEDROS", sans-serif;
+                        font-weight: bold !important;
+                        font-size: 3rem;
+                        color: $white;
+                        position: relative;
+                        top: 4px;
+                    }
+                }
+
+                > .content {
+                    font-family: "Montserrat", sans-serif;
+                    font-weight: lighter;
+                    font-size: 1.25rem;
+                    color: $white;
+                }
+
+                &.develop {
+                    grid-area: develop;
+                }
+                &.identity {
+                    grid-area: identity;
+                }
+                &.educate {
+                    grid-area: educate;
+                }
+                &.influence {
+                    grid-area: influence;
+                }
+            }
+
+            > .moreInfo {
+                grid-area: moreInfos;
+                padding: 0 10% 50% 10%;
+                border-radius: 20px;
+                background: #ffffff20; // TODO: add background image
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-end;
+                align-items: center;
+
+                > h3 {
+                    font-family: "Montserrat", sans-serif;
+                    font-weight: bold !important;
+                    font-size: 2rem;
+                    color: $white;
+                    margin-bottom: 2rem;
+                    text-align: center;
+                }
+
+                > .button {
                 }
             }
         }
