--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -165,7 +165,7 @@
 
     h2 {
         font-family: "CHEDROS", sans-serif;
-        font-size: 80px;
+        font-size: 5rem;
         font-weight: bold !important;
         color: $white;
     }
@@ -180,6 +180,137 @@
 
         > img {
             height: 400px;
+        }
+    }
+
+    #ourMarketplace {
+        margin-bottom: 140px;
+        overflow: hidden;
+
+        > .head {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+
+            > .title {
+                width: 40%;
+                max-width: 460px;
+
+                > .subTitle {
+                    font-family: "Montserrat", sans-serif;
+                    font-size: 1.25rem;
+                    font-weight: bold;
+                    color: $white;
+                    margin-bottom: 1.25rem;
+                }
+
+                > p {
+                    font-family: "Montserrat", sans-serif;
+                    font-size: 1.25rem;
+                    font-weight: normal;
+                    color: $white;
+                }
+            }
+
+            > .card {
+                width: 40%;
+                max-width: 580px;
+                margin-top: 120px;
+                gap: 30px;
+
+                > div {
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                    gap: 20px;
+
+                    .item {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        min-width: 70px;
+                        max-width: 70px;
+
+                        > img {
+                            &.hat {
+                                width: 70px;
+                                transform: rotate(-20deg);
+                            }
+                            &.wallet {
+                                width: 90px;
+                                transform: rotate(3deg);
+                            }
+                            &.gift {
+                                width: 60px;
+                                transform: rotate(6deg);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        > .slider {
+            perspective: 200px;
+            z-index: -1;
+            position: relative;
+            top: -30vh;
+
+            > .frontPenguin {
+                position: relative;
+                // left: 10vw;
+                bottom: -5.3vh;
+
+                > img {
+                    height: 80vh;
+                }
+            }
+        }
+    }
+
+    #technologicalInputs {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 80px;
+        margin-bottom: 230px;
+
+        > .left {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            max-width: 400px;
+
+            > h2 {
+                color: $primary;
+                font-size: 3rem;
+                margin-bottom: 2rem;
+            }
+
+            > img {
+                max-height: 170px;
+                max-width: 60%;
+            }
+        }
+
+        > .right {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start; // ??
+            gap: 1.25rem;
+            color: $white;
+            max-width: 400px;
+
+            > .subTitle {
+                font-weight: 600;
+                font-size: 1.25rem;
+                line-height: 1.2;
+            }
+            > p {
+                font-size: 1.25rem;
+                font-weight: normal;
+                line-height: 1.2;
+            }
         }
     }
 
