ADD our community sliding text

--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -100,7 +100,7 @@ body {
   line-height: 1;
   font-family: "Montserrat", sans-serif;
   background-color: $bg-body;
-  background: linear-gradient(180deg, black 360vh, $bg-body 700vh);
+  background: linear-gradient(180deg, black 0vh, black 700vh /*360vh*/, $bg-body 100%);
 }
 
 p {
