--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -441,6 +441,26 @@
         }
     }
 
+    #ourCommunity {
+        > .preTitle {
+            font-family: "Montserrat", sans-serif;
+            color: $white;
+            font-size: 1.25rem;
+            font-weight: lighter;
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        > h3 {
+            font-family: "Montserrat", sans-serif;
+            color: $white;
+            font-size: 1.8rem;
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 400px;
+        }
+    }
+
     p {
         font-size: 1.25rem;
         font-family: "Montserrat", sans-serif;
