--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -459,6 +459,85 @@
             text-align: center;
             margin-bottom: 400px;
         }
+
+        > .discord {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+            margin-bottom: 65px;
+
+            > p {
+                font-size: 1.2rem;
+                text-align: center;
+                color: $white;
+                font-weight: bold;
+            }
+
+            > .button {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 8px;
+
+                > svg {
+                    width: 100%;
+                    max-width: 20px;
+                    max-height: 20px;
+                    fill: $white;
+                }
+
+                > span {
+                    white-space: nowrap;
+                }
+            }
+        }
+
+        > .weCreateChannel {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: 100px;
+            margin-bottom: 260px;
+
+            > .left {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                align-items: flex-start;
+
+                > h2 {
+                    font-size: 1.8rem;
+                    color: $white;
+                    font-family: "Montserrat", sans-serif;
+                    font-weight: bold;
+                }
+
+                > p {
+                    font-size: 1.2rem;
+                    color: $white;
+                    font-family: "Montserrat", sans-serif;
+                    font-weight: normal;
+                    line-height: 1.4;
+                }
+
+                > .info {
+                    display: flex;
+                    gap: 15px;
+
+                    > .content {
+                        font-size: 1rem;
+                        font-family: "Montserrat", sans-serif;
+                        color: $white;
+                        font-weight: lighter;
+                        line-height: 1.2;
+                    }
+                }
+            }
+
+            > .right {
+            }
+        }
     }
 
     p {
