--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -511,6 +511,7 @@
                     color: $white;
                     font-family: "Montserrat", sans-serif;
                     font-weight: bold;
+                    margin-bottom: 1rem;
                 }
 
                 > p {
@@ -521,16 +522,42 @@
                     line-height: 1.4;
                 }
 
+                > .button {
+                    margin-bottom: 1rem;
+                }
+
                 > .info {
                     display: flex;
                     gap: 15px;
 
+                    > .bullet {
+                        width: 25px;
+                        min-width: 25px;
+                        height: 25px;
+                        border-radius: 999px;
+                        border: 1px solid $primary;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+
+                        &::after {
+                            content: "";
+                            display: block;
+                            width: 15px;
+                            height: 15px;
+                            border-radius: 999px;
+                            background-color: $primary;
+                        }
+                    }
+
                     > .content {
-                        font-size: 1rem;
-                        font-family: "Montserrat", sans-serif;
+                        font-size: 1.2rem;
                         color: $white;
-                        font-weight: lighter;
+                        font-family: "Montserrat", sans-serif;
+                        font-weight: normal;
                         line-height: 1.2;
+                        opacity: 0.4;
+                        font-style: italic;
                     }
                 }
             }
