ADD responsive nav + big pc

--- a/src/pages/Home/itemsSlider.module.scss
+++ b/src/pages/Home/itemsSlider.module.scss
@@ -24,7 +24,8 @@ $nbrItems: 12;
 
 .itemsSlider {
     transform: scale(1.1) rotateX(4deg) rotateZ(7deg) rotateY(4.3deg);
-    left: 10vw;
+    // left: 10vw;
+    left: 14vw;
 
     max-width: 100%;
     width: 100%;
