--- a/src/components/Layout/Footer/index.scss
+++ b/src/components/Layout/Footer/index.scss
@@ -19,43 +19,10 @@ footer {
 
         > .button {
         }
-
-        > .social {
-            > h3 {
-                font-size: 1.125rem;
-                font-weight: 600 !important;
-                color: #3d3d3d;
-            }
-
-            > .content {
-                display: flex;
-                gap: 5px;
+        > nav {
+            > .followUs {
+                display: none;
             }
         }
-
-        // div {
-        //     margin-top: 0.5rem;
-        //     font-size: 0.75rem;
-        //     display: inline-block;
-        //     font-weight: 400;
-        //     line-height: 1.155rem;
-
-        //     a {
-        //         color: $black;
-
-        //         &:hover {
-        //             color: $black;
-        //         }
-
-        //         #heart {
-        //             height: 16px;
-        //             width: 16px;
-
-        //             path {
-        //                 fill: #c00;
-        //             }
-        //         }
-        //     }
-        // }
     }
 }
