--- a/src/components/Layout/NavElements/index.module.scss
+++ b/src/components/Layout/NavElements/index.module.scss
@@ -34,4 +34,16 @@
             }
         }
     }
+
+    &.isOpen {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 130px 60px 20px 40px;
+        min-width: 30vw;
+        height: 100%;
+
+        > a {
+            color: $white;
+        }
+    }
 }
