--- a/src/components/Layout/Navbar/index.scss
+++ b/src/components/Layout/Navbar/index.scss
@@ -7,6 +7,10 @@ header {
     height: 130px;
     z-index: 1;
 
+    &.container {
+        max-width: 1300px !important;
+    }
+
     > .logo {
         position: relative;
         top: -6px;
@@ -19,5 +23,97 @@ header {
         display: flex;
         align-items: flex-end;
         gap: 15px;
+    }
+    > .navBar {
+        > nav {
+            > .followUs {
+                display: none;
+            }
+        }
+    }
+
+    > .icon {
+        display: none;
+        $rect_height: 5px;
+        $margin: 5px;
+        $height: $rect_height * 3 + $margin * 2;
+        $width: 30px;
+
+        position: relative;
+        width: $width;
+        height: $height;
+        flex-direction: column;
+        align-items: center;
+        cursor: pointer;
+
+        &.cross {
+            .rect {
+                width: ($width * $width + $height * $height) / (2 * $height);
+
+                &-1 {
+                    transform: rotateZ(45deg);
+                    top: $rect_height + $margin;
+                }
+                &-2 {
+                    transform: rotateZ(-45deg);
+                }
+                &-3 {
+                    display: none;
+                }
+            }
+        }
+
+        .rect {
+            margin-bottom: $margin;
+            position: relative;
+            top: 0;
+            border-radius: 2px;
+            width: $width;
+            height: $rect_height;
+            background-color: #fff;
+
+            &-3 {
+                margin-bottom: 0;
+            }
+        }
+    }
+}
+
+@media (max-width: 1300px) {
+    // mobile
+    header {
+        > .icon {
+            display: flex;
+        }
+
+        > .navBar {
+            display: none;
+        }
+
+        > .buttons {
+            display: none;
+        }
+
+        &.is-open {
+            > .navBar {
+                display: block;
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                background-color: $dark;
+
+                > nav {
+                    > .followUs {
+                        margin-top: auto;
+
+                        > h3 {
+                            color: $white;
+                            font-family: "Montserrat", sans-serif;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
