--- a/src/pages/Home/teamMember.module.scss
+++ b/src/pages/Home/teamMember.module.scss
@@ -22,9 +22,9 @@
     }
 
     > .description {
-        font-family: "Montserrat", sans-serif;
-        font-weight: lighter;
-        font-size: 1rem;
+        font-family: "Montserrat", sans-serif !important;
+        font-weight: lighter !important;
+        font-size: 1rem !important;
         color: $white;
         text-align: center;
         margin-bottom: 25px;
