--- a/src/components/Layout/Footer/index.scss
+++ b/src/components/Layout/Footer/index.scss
@@ -2,7 +2,7 @@
 
 footer {
     background-color: $white;
-    border-radius: 9999px 9999px 0 0;
+    border-radius: 60px 60px 0 0;
 
     > .content {
         padding: 2.5rem 0;
@@ -22,6 +22,19 @@ footer {
         > nav {
             > .followUs {
                 display: none;
+            }
+        }
+    }
+}
+
+@media (max-width: 1090px) {
+    footer {
+        > .content {
+            flex-direction: column;
+            gap: 23px;
+
+            > nav {
+                flex-direction: column;
             }
         }
     }
