ADD mobile background

--- a/src/components/Layout/Navbar/index.scss
+++ b/src/components/Layout/Navbar/index.scss
@@ -105,6 +105,7 @@ header {
 
                 > nav {
                     > .followUs {
+                        display: block;
                         margin-top: auto;
 
                         > h3 {
