--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -41,6 +41,12 @@
 
         img {
             height: 360vh;
+            &.mobile {
+                display: none;
+            }
+            &.desktop {
+                display: block;
+            }
         }
     }
 
@@ -158,6 +164,7 @@
             position: absolute;
             bottom: 60px;
 
+            z-index: 1;
             border-radius: 9999px;
             display: flex;
             gap: 14px;
@@ -1595,6 +1602,27 @@
             font-size: 3rem;
         }
 
+        #publicSale > .content > .semiBanner {
+            padding: 20px 60px 9px 60px;
+
+            > p {
+                font-size: 2.8rem;
+            }
+
+            &.time {
+                padding: 10px 25px;
+                gap: 20px;
+                > div {
+                    > .time {
+                        font-size: 2rem;
+                    }
+                    > .label {
+                        font-size: 1rem;
+                    }
+                }
+            }
+        }
+
         #ourLaunchpad {
             > .submersibleAndCard {
                 align-items: center;
@@ -1789,6 +1817,34 @@
                     top: 36vh;
                     left: 238vh;
                 }
+            }
+        }
+    }
+}
+
+// @media (max-aspect-ratio: 3/9) {
+@media (max-aspect-ratio: 5/8) {
+    #home {
+        #icebergHero {
+            top: -17vh;
+
+            img {
+                height: 220vh;
+
+                &.mobile {
+                    display: block;
+                }
+                &.desktop {
+                    display: none;
+                }
+            }
+        }
+
+        #pinguinOnIceberg {
+            top: 74.6vh;
+            left: calc(50vw - 20vh);
+            img {
+                height: 15vh;
             }
         }
     }
