--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -29,6 +29,12 @@
 }
 
 #home {
+    .decorationImage {
+        position: absolute;
+        z-index: -1;
+        opacity: 0.3;
+    }
+
     #icebergHero {
         z-index: -1;
         position: absolute;
@@ -496,6 +502,19 @@
         align-items: center;
         gap: 80px;
         margin-bottom: 230px;
+        position: relative;
+
+        #deco_1 {
+            width: 480px;
+            right: 1183px;
+            bottom: -200px;
+        }
+
+        #deco_2 {
+            width: 250px;
+            right: -70px;
+            bottom: -200px;
+        }
 
         > .left {
             display: flex;
@@ -549,6 +568,8 @@
         }
 
         > .subTitle {
+            padding-left: 15px;
+            padding-right: 15px;
             font-size: 1.25rem;
             text-align: center;
             color: $white;
@@ -670,8 +691,16 @@
     }
 
     #ourCommunity {
+        position: relative;
         display: grid;
         grid-template-areas: "preTitle" "h3" "bigTitle" "discord" "weCreateChannel";
+
+        #deco_3 {
+            width: 388px;
+            left: -304px;
+            top: 18px;
+            opacity: 0.1;
+        }
 
         > .preTitle {
             grid-area: preTitle;
@@ -739,6 +768,13 @@
             grid-template-areas: "left right" "info right";
             grid-gap: 1rem 100px;
             margin-bottom: 260px;
+
+            #deco_4 {
+                width: 682px;
+                left: -641px;
+                top: 342px;
+                opacity: 0.1;
+            }
 
             > .left {
                 grid-area: left;
@@ -908,6 +944,35 @@
             justify-content: center;
             gap: 190px 60px;
             flex-wrap: wrap;
+            position: relative;
+
+            #deco_5 {
+                width: 327px;
+                left: -306px;
+                top: 162px;
+                opacity: 0.2;
+            }
+            #deco_6 {
+                width: 433px;
+                right: -433px;
+                top: -20px;
+                opacity: 0.8;
+                transform: rotate(270deg);
+            }
+            #deco_7 {
+                width: 820px;
+                right: -601px;
+                top: 87px;
+                opacity: 0.4;
+                transform: rotate(275deg);
+            }
+            #deco_8 {
+                transform: rotate(335deg);
+                width: 308px;
+                right: -304px;
+                top: 535px;
+                opacity: 0.3;
+            }
 
             .avantageCard {
                 flex-basis: calc(30% - 1px);
@@ -1010,6 +1075,14 @@
                 "video video video video video video video video video video video video video video video"
                 "develop develop develop . identity identity identity . moreInfos moreInfos moreInfos moreInfos moreInfos moreInfos moreInfos"
                 "educate educate educate . influence influence influence . moreInfos moreInfos moreInfos moreInfos moreInfos moreInfos moreInfos";
+            position: relative;
+
+            #deco_9 {
+                transform: rotate(180deg);
+                width: 367px;
+                left: -383px;
+                top: -194px;
+            }
 
             > .weEstablished {
                 padding-left: 1rem;
@@ -1039,8 +1112,56 @@
 
             > .video {
                 grid-area: video;
-                border-radius: 20px;
-                overflow: hidden;
+                position: relative;
+
+                > .stamp {
+                    position: absolute;
+                    top: -45px;
+                    left: -22px;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 50%;
+                    transform: rotate(344deg);
+                    z-index: 3;
+                }
+
+                #deco_10 {
+                    width: 765px;
+                    left: -668px;
+                    top: -115px;
+                    opacity: 1;
+                    z-index: 3;
+                    transform: rotate(320deg);
+                }
+                #deco_11 {
+                    width: 537px;
+                    left: -386px;
+                    top: 256px;
+                    opacity: 1;
+                    transform: rotate(90deg);
+                    z-index: 3;
+                }
+                #deco_12 {
+                    width: 715px;
+                    right: -500px;
+                    top: 130px;
+                    opacity: 1;
+                    transform: rotate(90deg);
+                    z-index: 3;
+                }
+                #deco_13 {
+                    width: 581px;
+                    right: -487px;
+                    top: -14px;
+                    opacity: 1;
+                    transform: rotate(315deg);
+                    z-index: 3;
+                }
+
+                video {
+                    border-radius: 20px;
+                    overflow: hidden;
+                }
             }
 
             > .globalPoint {
