--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -160,44 +160,6 @@
                 > .advantages {
                     grid-area: advantages;
                     margin-bottom: 50px;
-
-                    table {
-                        border-collapse: separate;
-                        border-spacing: 10px 16px;
-
-                        tr td {
-                            position: relative;
-
-                            &.price {
-                                font-family: "CHEDROS", sans-serif;
-                                font-size: 1.25rem;
-                                font-weight: bold;
-                                padding-left: 30px;
-
-                                &::before {
-                                    content: "";
-                                    background-color: $primary;
-                                    width: 15px;
-                                    height: 15px;
-                                    border-radius: 50%;
-                                    position: absolute;
-                                    left: 0;
-                                }
-                            }
-
-                            &.arrow {
-                                > img {
-                                    max-width: 25px;
-                                }
-                            }
-
-                            &.advantage {
-                                font-family: "Montserrat", sans-serif;
-                                font-size: 1.125rem;
-                                font-weight: bold;
-                            }
-                        }
-                    }
                 }
 
                 > .mintButton {
@@ -350,6 +312,7 @@
         }
 
         > .saleInfos {
+            cursor: pointer;
             position: absolute;
             bottom: 60px;
 
